Fix: Scrollbar error build

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -26,6 +26,7 @@
     --button-secondary-hover: #1a1a1a;
   }
 } */
+
 .main {
   display: flex;
   flex-direction: column;
@@ -38,23 +39,18 @@
   height: calc(100svh - 88px);
   /* flex: 1; */
   overflow: auto;
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 24px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: #951e1e;
+    border-radius: 4px;
+  }
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
 }
-
-.main::-webkit-scrollbar {
-  width: 8px;
-  height: 24px;
-}
-
-.main::-webkit-scrollbar-thumb {
-  background-color: #951e1e;
-  border-radius: 4px;
-}
-
-.main::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-/* firefox */
 
 .main ol {
   font-family: var(--font-geist-mono);
